# djambi6players

./: .gitignore  .pre-commit-config.yaml  .slugignore  Aptfile  Makefile  README.md  board.py  client.py  env.py  environment.yml  game.js  index.html  package-lock.json  pyproject.toml  requirements-train.txt  requirements.txt  server.py  setup.py
backend/: Aptfile  requirements.txt
backend/src/: Dockerfile  __init__.py  animation.py  board.py  constants.py  database.py  djambi.db  main.py  minmax_player.py  pieces.py  player.py  server.py  utils.py
client/src/: Game.ts  GameBoard.ts  GameState.ts  HEXUtils.ts  Piece.ts  PieceImages.ts  WebSocketClient.ts  constants.ts  index.html
djambi6players.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: game.js  index.html
local/: README.md  djambi_env.py  dqn_model.py  env.py  labo.ipynb  requirements-train.txt  train.py
rules/: Djambi_rules.aux  Djambi_rules.tex
