[tool.poetry]
name = "djambi6players"
version = "0.1.0"
description = "Djambi game with 6 players and reinforcement learning"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "backend/src", from = "." },
    { include = "local", from = "." }
]

[tool.poetry.dependencies]
python = "3.11"
numpy = "^1.24.0"
gymnasium = "^0.29.0"
torch = "^2.0.0"
matplotlib = "^3.7.0"
tqdm = "^4.65.0"
pygame = "^2.6.1"
cairosvg = "^2.7.1"
websockets = "^10.4"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
djambi = "backend.src.main:main" 